--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 streamlit==1.39.0
 ics==0.7.2
 arrow==1.3.0
-undetected-chromedriver==3.5.4
-selenium==4.15.2
-selenium-stealth==1.0.6
-webdriver-manager==4.0.2
-beautifulsoup4
+jobspy=0.29.0
